Add workaround for errors with Java 17